--- a/maaxcam/templates/account/base.html
+++ b/maaxcam/templates/account/base.html
@@ -6,10 +6,10 @@
 
 {% block scripts %}
   {{ block.super }}    
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
         <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/css/bootstrap.min.css"> -->
 <!--         <link rel="stylesheet" href="{{staticfiles}}/css/AdminLTE.css">
  -->        
 {% endblock %}
