--- a/maaxcam/templates/account/index.html
+++ b/maaxcam/templates/account/index.html
@@ -41,6 +41,7 @@
                                     <h3 class="box-title">Assinatura {{ a.id }}</h3>
                                     
                                     Seu plano é {{ a.plano.nome }}
+                                    <!-- <a href="/gerencial/planos">Detalhes</a> -->
                                     <a href="#demo" data-toggle="collapse">Detalhes</a>
 
 									<div id="demo" class="collapse">
