--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -285,7 +285,7 @@
         <!-- =================================
              SECTION CAMERAS
         ====================================== -->
-        <section id="cameras">
+        <section id="cameras" style="min-height: 710px;">
             <div class="container">
                 <!-- Padding -->
                 <div class="wrapper-sm">
@@ -301,13 +301,16 @@
             </div><!-- /End Container -->
 
 
-            <div class="row">
-                <div class="col-md-8" style="text-align:center;">
-                  <!-- <div id="left" style="margin-left: 120px;"> <!-- col-xs-12 col-sm-3 col-md-2-->
+            <div class="row row-centered">
+                <div class="col-md-8" style="text-align:center;" >
+                <h5 id="currentSlide_title" style="margin-top: -25px;">Ponte Hercílio Luz</h5>
+				<div class="well">
+				<div id="currentSlide" class="embed-responsive embed-responsive-16by9">
+				<iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=false&sound=true" width="685px" height="400px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe>
+				</div>
+				</div>
 
-	            <h5 id="currentSlide_title" style="margin-top: -25px;">Ponte Hercílio Luz</h5>
-	            <div id="currentSlide" class="well"><iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=false&sound=true" width="685px" height="400px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe></div>
-	            <div class="well">
+<div class="well">
 	                <div id="myCarousel" class="carousel slide">
 
 	                <ol class="carousel-indicators">
@@ -322,38 +325,39 @@
 
 	                <div class="item active">
 	                	<div class="row-fluid">
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide1"><img src="{% static 'assets/images/thumb_ponte.jpg'%}" title="Ponte Hercílio Luz"  style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide2"><img src="{% static 'assets/images/thumb_kioske.jpg'%}" title="Kioske" style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide3"><img src="{% static 'assets/images/thumb_beira_mar.jpg'%}" title="Beira-Mar" style="max-width:170px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide1"><img src="{% static 'assets/images/thumb_ponte.jpg'%}" title="Ponte Hercílio Luz"  style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide2"><img src="{% static 'assets/images/thumb_kioske.jpg'%}" title="Kioske" style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide3"><img src="{% static 'assets/images/thumb_beira_mar.jpg'%}" title="Beira-Mar" style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide4"><img src="{% static 'assets/images/thumb_catedral.jpg'%}" title="Catedral"  style="max-width:150px;" /></a></div>
+
 	                	</div><!--/row-fluid-->
 	                </div><!--/item-->
 
 	                <div class="item">
 	                	<div class="row-fluid">
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide4"><img src="{% static 'assets/images/thumb_catedral.jpg'%}" title="Catedral"  style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide5"><img src="{% static 'assets/images/thumb_coqueiros.jpg'%}" title="Coqueiros" style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide6"><img src="{% static 'assets/images/thumb_koxixos.jpg'%}" title="Koxixos" style="max-width:170px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide5"><img src="{% static 'assets/images/thumb_coqueiros.jpg'%}" title="Coqueiros" style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide6"><img src="{% static 'assets/images/thumb_koxixos.jpg'%}" title="Koxixos" style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide7"><img src="{% static 'assets/images/thumb_mirante.jpg'%}" title="Mirante da Lagoa"  style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide8"><img src="{% static 'assets/images/thumb_ponte_lagoa.jpg'%}" title="Ponte da Lagoa" style="max-width:150px;" /></a></div>
+	                	
 	                	</div><!--/row-fluid-->
 	                </div><!--/item-->
 
 	                <div class="item">
 	                	<div class="row-fluid">
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide7"><img src="{% static 'assets/images/thumb_mirante.jpg'%}" title="Mirante da Lagoa"  style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide8"><img src="{% static 'assets/images/thumb_ponte_lagoa.jpg'%}" title="Ponte da Lagoa" style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide9"><img src="{% static 'assets/images/thumb_sto_antonio.jpg'%}" title="Marina Sto Antônio de Lisboa" style="max-width:170px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide9"><img src="{% static 'assets/images/thumb_sto_antonio.jpg'%}" title="Marina Sto Antônio de Lisboa" style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide10"><img src="{% static 'assets/images/thumb_kite.jpg'%}" title="Câmera Kite-Surf"  style="max-width:150px;" /></a></div>
+	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide11"><img src="{% static 'assets/images/thumb_kite.jpg'%}" title="Praia da Joaquina" style="max-width:150px;" /></a></div>
+
 	                	</div><!--/row-fluid-->
 	                </div><!--/item-->
-	                
-	                <div class="item">
-	                	<div class="row-fluid">
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide10"><img src="{% static 'assets/images/thumb_kite.jpg'%}" title="Câmera Kite-Surf"  style="max-width:170px;" /></a></div>
-	                	  <div class="span3"><a href="#x" class="thumbnail2" id="slide11"><img src="{% static 'assets/images/thumb_kite.jpg'%}" title="Praia da Joaquina" style="max-width:170px;" /></a></div>
-	                	</div><!--/row-fluid-->
-	                </div><!--/item-->
+
 	                </div><!--/carousel-inner-->
 
 	                <a class="left carousel-control2" href="#myCarousel" data-slide="prev">‹</a>
+	                <div class="pull-right">
 	                <a class="right carousel-control2" href="#myCarousel" data-slide="next">›</a>
+	                </div>
 	                </div><!--/myCarousel-->
 
 	            </div><!--/well-->
@@ -362,7 +366,7 @@
 
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 col-centered">
                 
                   <img src="{% static 'assets/images/flyer_small.png'%}" alt="" class="img-responsive">
 
@@ -391,7 +395,7 @@
                         <!-- Section Header Title -->
                         <div class="col-xs-12">
                             <h2>Monitore sua rua</h2>
-                            <h4>Em um mundo cada vez mais conectado, a Maaxcam fornece a melhor ferramenta para você e seus vizinhos promoverem ações efetivas de monitoramento e, proteção da sua rua. </h4>
+                            <h4>Em um mundo cada vez mais conectado, a Maaxcam fornece a melhor ferramenta para você e seus vizinhos promoverem ações efetivas de monitoramento e proteção da sua rua. </h4>
                             <h4>De qualquer lugar que você esteja acompanhará ao que está acontecendo.</h4>
                             <h4>
                             Faça parte  de um sistema  de segurança conjunta e promova mais segurança na sua comunidade.
@@ -431,7 +435,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <!-- <h2>Quais as vantagens de contratar o serviço Maaxcam</h2> -->
-                            <h2>Entenda melhor como funciona</h2>
+                            <h2>Entenda melhor como funciona:</h2>
                             <!-- <p class="large">Entenda melhor como funciona e tudo o que a Maaxcam pode oferecer.</p> -->
                         </div>
                     </div>
@@ -453,7 +457,9 @@
                         </div> -->
                         <div class="col-md-12" style="text-align: center;">
                           <br>
-                          <iframe width="640" height="360" src="https://www.youtube.com/embed/SZEflIVnhH8"></iframe>
+                          <div class="embed-responsive embed-responsive-16by9">
+                          	<iframe width="640" height="360" src="https://www.youtube.com/embed/SZEflIVnhH8"></iframe>
+                          </div>
                           <br>
                             <!-- <div class="img"> -->
                                 <!-- <img src="assets/images/features/feature1_1.png" alt="" class="img-responsive"> -->
@@ -485,7 +491,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h2 class="text-white">Quais as vantagens de contratar o serviço Maaxcam</h2>
-                            <p class="small text-white">Quando você assina o serviço de monitoramento de rua.</p>
+                            <p class="small text-white">Quando você assina o serviço de monitoramento de rua:</p>
                         </div>
                     </div>
                 </div>
@@ -807,13 +813,13 @@
                             <h2>Monitore sua câmera IP</h2>
                             <br>
                             <h4>Nunca foi tão simples ficar de olho no que é importante para você.
-Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitoramento on-line. </h4>
+Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitoramento on-line. </h4>
 <br>
                             <h4>Mais segurança em suas mãos! </h4>
 
                         </div>
                     </div>
-
+				<div class="row">
                     <div class="col-sm-3 team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/bebe_ip.png'%}" class="img-responsive" alt="">
@@ -839,16 +845,30 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                         <h4>Sua casa de férias</h4>
                     </div>
 
-                </div><!-- /End Row -->
-				<div id="row">
-                  <br>
+
+<!--                   <br>
                     <div class="btn-box" style="margin-top: 110px;">
                         <a href="#pricing" class="btn btn-color scrollto">
                             <i class="icon arrow_carrot-2dwnn_alt"></i>
                             Conheça o melhor plano para você!
                         </a>
-                    </div>
-				 <!-- </div> --> <!-- /end Row -->
+                    </div> -->
+				 </div> <!-- /end Row -->
+				 
+				 	<div class="col-md-12" style="text-align: center;">
+                          <br>
+                            <!-- <div class="img"> -->
+                                <!-- <img src="assets/images/features/feature1_1.png" alt="" class="img-responsive"> -->
+                                <!-- <a href="http://youtu.be/SZEflIVnhH8" data-type="youtube" class="venobox video-player"><i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="2s"></i></a> -->
+                            <!-- </div> -->
+                            <div class="btn-box">
+                                <a href="#pricing" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Conheça o melhor plano para você!</a>
+                            </div>
+                            <br><br>
+                        </div>
+				 
+				 
+				 
                 </div><!-- /End Wrapper -->
             </div><!-- /End Container -->
 
@@ -887,6 +907,7 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                                     <li>Suporte e transmissão HD</li>
                                     <!-- <li>Livre de anúncios</li> -->
                                 </ul>
+                                <br>
                                 <a href="#contact" class="btn btn-color scrollto">Contrate</a>
                             </div>
                         </div>
@@ -904,6 +925,7 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                                     <li>Suporte e transmissão HD</li>
                                     <!-- <li>Livre de anúncios</li> -->
                                 </ul>
+                                <br>
                                 <!-- <a href="#contact" class="btn btn-color scrollto" onMouseOut="this.style.background-color='#39b753'" onMouseOver="this.style.background-color='#333333'" style="background-color:#39b753; border: #39b753;">Contrate</a> -->
                                 <a href="#contact" class="btn btn-color scrollto">Contrate</a>
 
@@ -1025,7 +1047,7 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                                   </div>
                               </div>
                                 <div class="col-md-6" style="text-align: center;">
-                                  <p class="large">Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou, mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p>
+                                  <p class="large">Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p>
 
 
                                   <h4>Transmita ao Vivo!</h4>
@@ -1140,7 +1162,7 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                     <div class="row">
                         <div class="col-md-12">
                             <h2>Contato</h2>
-                            <p class="large">Preencha o formulário e retornaremos o mais breve possível. </p>
+                            <p class="large" style="margin-left: 100px;">Preencha o formulário e retornaremos o mais breve possível. </p>
                         </div>
                     </div>
                     <br>
@@ -1209,9 +1231,8 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                             <div class="form-group">
                                 <label for="inputType" class="col-sm-2 control-label">Mensagem</label>
                                 <div class="col-sm-8">
-                                    <input type="textarea" class="form-control"  id="input_msg" name="input_msg" placeholder="Deixe sua mensagem..."> 
-<!--                                     <textarea class="form-control" id="input_msg" name="input_msg" form="contact" placeholder="Deixe sua mensagem..."></textarea>
- -->
+<!--                                     <input type="textarea" class="form-control"  id="input_msg" name="input_msg" placeholder="Deixe sua mensagem..."> 
+ -->                                     <textarea class="form-control" id="input_msg" name="input_msg" form="contact" placeholder="Deixe sua mensagem..."></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -1415,13 +1436,13 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                         <!-- Footer Left Col -->
                         <div class="col-md-5">
                                 <!-- Logo -->
-                                <a href="#top" class="scrollto" title="SmartMvp">
+                                <a href="#top" class="scrollto" title="MaaxCam">
                                     <span class="text-logo">MaaxCam</span>
                                 </a>
                                 <!-- <p class="footer-hero"><strong>600.000</strong> users registered since January.<br> -->
 <!--                                 Monitoramento compartilhado.
  -->                                <p class="footer-cta">Compartilhe essa ideia!
-                                    <a href="#about" class="btn btn-color">Saiba mais</a>
+                                    <a href="#charts" class="btn btn-color scrollto">Saiba mais</a>
                                 </p>
                         </div>
                         <!-- Footer Contact Col -->
@@ -1454,7 +1475,7 @@ Conectamos sua câmera ip em nossa plataforma e você realiza o seu monitorament
                         </div>
                         <!-- Footer Right Col: Twitter Feed -->
                         <div class="col-md-4">
-                                <h5 class="text-white">Espaço a definir(Facebook/Twitter?)</h5>
+                                <h5 class="text-white">Facebook</h5>
                                 <div class="tweet"></div>
                         </div>
 
