--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -433,7 +433,7 @@
                             <div class="btn-box">
                                 <a href="#pricing" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Conheça o melhor plano para você!</a>
                             </div>
-                            <br><br>
+                            
                         </div>
 
 
@@ -830,7 +830,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                             <div class="btn-box">
                                 <a href="#pricing" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Conheça o melhor plano para você!</a>
                             </div>
-                            <br><br>
+                            
                         </div>
 				 
 				 
@@ -865,7 +865,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                     <div class="row grid-md">
                         <div class="col-sm-3">
                             <div class="pricing-tab" style="border: 3px solid #39b753; background-color: rgba(57, 183, 83, 0.07);">
-                                <p class="price">R$ 49<span>/mês</span></p>
+                                <br>
+                                <p class="price">R$ 49<span>,90<b>/mês</b></span></p>
                                 <h4 style="border-bottom: 3px solid #39b753;">Monitore sua rua</h4>
                                 <ul class="pricing-features">
                                     <li><i class="fa fa-movie"></i>Instalação gratuita</li>
@@ -883,7 +884,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                 <div class="ribbon">
                                     <h5 class="popular" style="background-color: #39b753;">Popular</h5>
                                 </div>
-                                <p class="price">R$ 89<span>/mês</span></p>
+                                <br>
+                                <p class="price">R$ 89<span>,90<b>/mês</b></span></p>
                                 <h4 style="border-bottom: 3px solid #39b753;">Monitore sua rua</h4>
                                 <ul class="pricing-features">
                                     <li><i class="fa fa-movie"></i>Instalação gratuita</li>
@@ -901,7 +903,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
                         <div class="col-sm-3">
                             <div class="pricing-tab" style="border: 3px solid #ebab3e; background-color: rgba(235, 171, 62, 0.06);">
-                                <p class="price">R$ 29<span>/mês</span></p>
+                                <br>
+                                <p class="price">R$ 29<span>,90<b>/mês</b></span></p>
                                 <h4 style="border-bottom: 3px solid #ebab3e;">Monitore sua câmera IP</h4>
                                 <ul class="pricing-features">
                                     <!-- <li><i class="fa fa-movie"></i>Instalação gratuita</li> -->
@@ -918,7 +921,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                 <div class="ribbon">
                                     <h5 class="popular" style="background-color: #ebab3e;">Popular</h5>
                                 </div>
-                                <p class="price">R$ 79<span>/mês</span></p>
+                                <br>
+                                <p class="price">R$ 79<span>,90<b>/mês</b></span></p>
                                 <h4 style="border-bottom: 3px solid #ebab3e;">Monitore sua câmera IP</h4>
                                 <ul class="pricing-features">
                                     <!-- <li><i class="fa fa-movie"></i>Instalação gratuita</li> -->
@@ -1135,7 +1139,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                     <div class="row">
                       <div class="col-sm-6 col-md-3" style="text-align: left;">
                           <!-- <h3>Nós ligamos para você</h3> -->
-                          <img src="{% static 'assets/images/logo_escuro_pequeno.jpg'%}" class="img-resposive">
+                          <img src="{% static 'assets/images/logo_escuro_pequeno.png'%}" class="img-resposive">
                           <br><br>
                           <p class="mobile-text">Nós ligamos para você!</p> <!-- <span class="text-color">Teste!</span> -->
 
@@ -1252,7 +1256,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                 <span class="input-group" style="text-align:center;"> -->
                                 
                                 <p style="text-align:center;">
-                                    <button class="btn btn-color" type="submit" >Enviar</button>
+                                    <button class="btn btn-color" type="submit" style="width: 250px;">Enviar</button>
                                    </p>
                                 <!-- </span> -->
                                 
