--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -14,7 +14,7 @@
 	{% load staticfiles %}
     
     <!-- FAVICON  -->
-    <link rel="icon" href="{% static 'assets/images/favicon/maaxcam_favicon.jpg'%}">
+    <link rel="icon" href="{% static 'assets/images/favicon/maaxcam_favicon.png'%}">
 
     <!-- =========================
        STYLESHEETS
@@ -306,7 +306,7 @@
                 <h5 id="currentSlide_title" style="font-size: 20px; margin-top: -25px; margin-left: 12px;">Ponte Hercílio Luz</h5>
 				<div class="well">
 				<div id="currentSlide" class="embed-responsive embed-responsive-16by9">
-				<iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=false&sound=true" width="685px" height="400px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe>
+				<iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=true&sound=true" width="782px" height="440px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe>
 				</div>
 				</div>
 
@@ -1058,7 +1058,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
             <div class="row">
                 <div class="col-xs-12">
-                  <div class="panel-container" style="height: 400px;">
+                  <div class="panel-container" style="height: 420px;">
                   <div class="tab-content" id="tab-feature-1" style="padding-top: 0px;">
                     <div class="container">
 
