--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -292,7 +292,7 @@
                     <div class="row">
                         <!-- Section Header Title -->
                         <div class="col-lg-12">
-                            <h2>Câmeras ao vivo!</h2>
+                            <h2 style="text-align: center;">Câmeras ao vivo!</h2>
                             <!-- <p class="large">Principais pontos da cidade.</p> -->
 
                         </div>
@@ -356,10 +356,10 @@
             <div class="container">
                 <!-- Padding -->
                 <div class="wrapper-md">
-                    <div class="row">
+                    <div class="row row-centered">
                         <!-- Section Header Title -->
-                        <div class="col-xs-12">
-                            <h2>Monitore sua rua</h2>
+                        <div class="col-xs-12" >
+                            <h2 style="text-align: center;">Monitore sua rua</h2>
                             <h4>Em um mundo cada vez mais conectado, a Maaxcam fornece a melhor ferramenta para você e seus vizinhos promoverem ações efetivas de monitoramento e proteção da sua rua. </h4>
                             <h4>De qualquer lugar que você esteja acompanhará ao que está acontecendo.</h4>
                             <h4>
@@ -369,7 +369,7 @@
                             <!-- Video Lightbox on Click -->
 
                             <!-- <a href="http://youtu.be/SZEflIVnhH8" data-type="youtube" class="btn btn-white venobox"><i class="icon arrow_triangle-right_alt"></i>Assista ao vídeo e veja como funciona</a> -->
-                            <a href="#charts" class="btn btn-white scrollto" style="font-size: 15px;"><i class="icon arrow_triangle-right_alt"></i>Assista ao vídeo e veja como funciona</a>
+                            <a href="#charts" class="btn btn-white scrollto" style="font-size: 14px;"><i class="icon arrow_triangle-right_alt"></i>Assista ao vídeo e veja como funciona</a>
 
 
                         </div>
@@ -397,10 +397,10 @@
         <section class="charts" id="charts">
             <div class="container" style="height: 550px;">
                 <div class="wrapper-sm">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-12">
                             <!-- <h2>Quais as vantagens de contratar o serviço Maaxcam</h2> -->
-                            <h2>Entenda melhor como funciona:</h2>
+                            <h2 style="text-align: center;">Entenda melhor como funciona:</h2>
                             <!-- <p class="large">Entenda melhor como funciona e tudo o que a Maaxcam pode oferecer.</p> -->
                         </div>
                     </div>
@@ -453,9 +453,9 @@
         <section class="tab-features color-bg" id="features">
             <div class="container">
                 <div class="features-title">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-12">
-                            <h2 class="text-white">Quais as vantagens de contratar o serviço Maaxcam</h2>
+                            <h2 class="text-white" style="text-align: center;">Quais as vantagens de contratar o serviço Maaxcam</h2>
                             <p class="small text-white">Quando você assina o serviço de monitoramento de rua:</p>
                         </div>
                     </div>
@@ -703,19 +703,19 @@
         <section id="canvas-bg" class="dark-bg signup-divider">
             <div class="container">
                 <div class="wrapper-md">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-12">
-                            <h2 class="text-white">Experimente!</h2>
-                            <p class="large text-white">Transmissão em tempo real.</p>
+                            <h2 class="text-white" style="text-align: center;">Experimente!</h2>
+                            <p class="large text-white" style="text-align: center;">Transmissão em tempo real.</p>
                             <!-- Handwritten text with arrow -->
                             <p class="signup-handwritten text-white">Acesso instantâneo! <br>Gratuito</p>
                         </div>
                     </div>
                     <br><br>
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-6">
 
-                          <p class="large text-white">
+                          <p class="large text-white" style="text-align: center;">
                               Preencha aqui os seus dados e acompanhe uma demonstração em tempo real de uma das câmeras da MaaxCam.
                           </p>
 
@@ -746,9 +746,11 @@
                             <!-- Signup Button -->
                             <button class="btn btn-color" id="assistir" type="submit" >Assistir<i class="icon arrow_right"></i></button>
                         </form>
+                        <br>
                         </div>
-
+<br>
                         <div class="col-md-6">
+                        
                           <div id="experimente" class="embed-responsive embed-responsive-16by9">
 <!-- style="background-image: assets/images/bg_experimente.jpg;" -->
                                    <img src="{% static 'assets/images/bg_experimente.jpg'%}" alt="" class="img-responsive">
@@ -773,10 +775,10 @@
             <div class="container">
                 <!-- Padding -->
                 <div class="wrapper-sm">
-                    <div class="row">
+                    <div class="row row-centered">
                         <!-- Section Header Title -->
                         <div class="col-xs-12">
-                            <h2>Monitore sua câmera IP</h2>
+                            <h2 style="text-align: center;">Monitore sua câmera IP</h2>
                             <br>
                             <h4>Nunca foi tão simples ficar de olho no que é importante para você.
 Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitoramento on-line. </h4>
@@ -854,9 +856,9 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
         <section class="pricing light-bg" id="pricing">
             <div class="container">
                 <div class="wrapper-sm">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-xs-12">
-                            <h2>Comece hoje mesmo</h2>
+                            <h2 style="text-align: center;">Comece hoje mesmo</h2>
                             <p class="large">Escolha o plano mais adequado para você.</p>
                         </div>
                     </div>
@@ -990,9 +992,9 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
         <section class="team" id="team">
             <div class="container">
                 <div class="wrapper-sm">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-12">
-                            <h2>Divulgue seu negócio!</h2>
+                            <h2 style="text-align: center;">Divulgue seu negócio!</h2>
                             <br>
                             <!-- <p class="large">Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou, mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p> -->
                             <!-- <p>Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou, mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p>-->
@@ -1047,9 +1049,9 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
         <section class="tab-features color-bg" id="parceiros">
             <div class="container">
                 <div class="features-title">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-xs-12">
-                            <h2 class="text-white">Programa de Parceiros Maaxcam Câmeras Compartilhadas</h2>
+                            <h2 class="text-white" style="text-align: center;">Programa de Parceiros Maaxcam Câmeras Compartilhadas</h2>
                             <p class="medium text-white">UNINDO  FORÇAS, CRESCEMOS JUNTOS</p>
                         </div>
                     </div>
@@ -1058,7 +1060,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
             <div class="row">
                 <div class="col-xs-12">
-                  <div class="panel-container" style="height: 420px;">
+                  <div class="panel-container" style="height: 440px;">
                   <div class="tab-content" id="tab-feature-1" style="padding-top: 0px;">
                     <div class="container">
 
@@ -1129,15 +1131,15 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
         <section class="mobile-download light-bg" id="contact">
             <div class="container">
                 <div class="wrapper-sm">
-                    <div class="row">
+                    <div class="row row-centered">
                         <div class="col-md-12">
-                            <h2>Contato</h2>
+                            <h2 style="text-align: center;">Contato</h2>
 <!--                             <p class="large" style="margin-left: 100px;">Preencha o formulário e retornaremos o mais breve possível. </p>
  -->                        </div>
                     </div>
                     <br>
                     <div class="row">
-                      <div class="col-sm-6 col-md-3" style="text-align: left;">
+                      <div class="col-sm-6 col-md-3" style="text-align: center;">
                           <!-- <h3>Nós ligamos para você</h3> -->
                           <img src="{% static 'assets/images/logo_escuro_pequeno.png'%}" class="img-resposive">
                           <br><br>
